--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -16,7 +16,7 @@ RUN $(npm bin)/ng build
 
 
 
-FROM nginxinc/nginx-unprivileged:latest
+FROM quay.io/ericbos1/nginx-unprivileged:latest
 USER root
 ## Copy our default nginx config
 COPY nginx/default.conf /etc/nginx/conf.d/
