--- a/backend/service.yaml
+++ b/backend/service.yaml
@@ -7,7 +7,7 @@ spec:
   template:
     spec:
       containers:
-        - image: s4saif/senti:v7
+        - image: quay.io/ericbos1/senti:v7
           env:
             - name: apikey
               valueFrom:
