--- a/backend/service.yaml
+++ b/backend/service.yaml
@@ -2,7 +2,7 @@ apiVersion: serving.knative.dev/v1
 kind: Service
 metadata:
   name: sentiment 
-  namespace: sentiment-project
+  namespace: mvician
 spec:
   template:
     spec:
